--- a/frontend/calendar-app/package.json
+++ b/frontend/calendar-app/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "tail.datetime": "^0.4.13"
   },
   "scripts": {
     "start": "react-scripts start",
