--- a/frontend/calendar-app/package.json
+++ b/frontend/calendar-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
+    "package.json": "^2.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
